--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "graphiql-ws",
   "description": "GraphiQL rendering implementation for `graphql-ws` package",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/index.js",
   "repository": "",
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.1",
-    "graphql": "^0.11.6",
-    "graphql-ws": "0.1.2"
+    "express": "^4.16.1"
   },
   "scripts": {
     "compile": "tsc",
@@ -17,7 +15,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.0.37",
-    "@types/graphql": "^0.11.4",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1"
   }
